Fixed contact page font on mobile

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
 
 body {
   overflow: overlay;
+  overflow-x: hidden;
 }
 
 .navbar {
@@ -273,6 +274,7 @@ body {
   -webkit-text-fill-color: transparent;
   -moz-text-fill-color: transparent;
 }
+
 .hero__text {
   font-size: 35px;
   background: white; /* fallback for old browsers */
@@ -294,7 +296,7 @@ body {
   }
 
   .hero__description {
-    font-size: 40px;
+    font-size: 34px;
   }
 }
 
